# tests_online

./: Cargo.toml  README.md
src/: main.rs
src/bbdd/: conectar.rs  create_table.rs  mod.rs  select_configuracion.rs  update_configuracion.rs
src/cliente_http/: mod.rs
src/cuestionarios/: chatpdf_preguntar.rs  chatpdf_subir.rs  mod.rs  modelos.rs  virtualizar_gift.rs  virtualizar_moodle_xml.rs  vitualizar_html.rs
src/plantillas/: index.html  moodle_xml.xml  test_online.html
src/rutas/: _router.rs  configuracion.rs  crear.rs  index.rs  mod.rs  subir.rs
src/utilidades/: mod.rs
