[package]
name = "tests_online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["json", "multipart"] }
handlebars = "5.1.2"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["multipart", "rustls-tls"], default-features = false}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
libsqlite3-sys = { version = "*", features = [ "bundled" ] }
tokio = { version = "1.38.0", features = ["full"] }
